config/devops-service.yml
apiVersion: v1
kind: Service
metadata:
  name: projet-devops-m2
spec:
  ports:
    - name: http
      targetPort: 8081
      port: 80
  type: ClusterIP
  selector:
    app: projet-devops-m2
