config/devops-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-cloud-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: projet-devops-m2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projet-devops-m2
                port:
                  number: 8082
